--- a/index.html
+++ b/index.html
@@ -4,62 +4,178 @@
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <title>M.R. La Passeggiata</title>
+      <link rel="stylesheet" href="assets/css/reset.css" />
+      <link
+         rel="stylesheet"
+         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+         crossorigin="anonymous"
+         referrerpolicy="no-referrer"
+      />
       <link
          href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
          rel="stylesheet"
          integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
          crossorigin="anonymous"
       />
-      <link rel="stylesheet" href="style.css" />
+      <link rel="stylesheet" href="./assets/css/style.css" />
    </head>
    <body>
       <header>
-         <nav>
-            <ul
-               class="nav bg-black nav-pills nav-fill gap-2 p-1 small rounded-5 shadow-sm"
-               id="pillNav2"
-               role="tablist"
-            >
-               <li class="nav-item" role="presentation">
-                  <button
-                     class="nav-link active rounded-5"
-                     id="home-tab2"
-                     data-bs-toggle="tab"
-                     type="button"
-                     role="tab"
-                     aria-selected="true"
-                  >
-                     STRING HOPPERS
-                  </button>
-               </li>
-               <li class="nav-item" role="presentation">
-                  <button
-                     class="nav-link rounded-5"
-                     id="profile-tab2"
-                     data-bs-toggle="tab"
-                     type="button"
-                     role="tab"
-                     aria-selected="false"
-                  >
-                     RISTORRANTE-PIZZERIA-BAR
-                  </button>
-               </li>
-               <li class="nav-item" role="presentation">
-                  <button
-                     class="nav-link rounded-5"
-                     id="contact-tab2"
-                     data-bs-toggle="tab"
-                     type="button"
-                     role="tab"
-                     aria-selected="false"
-                  >
-                     CONTACT
-                  </button>
+         <div class="logo">
+            <img class="logo" src="./assets/img/logo.png" alt="logo" />
+         </div>
+         <div class="primary-title">
+            <h1>RISTORANTE-PIZZERIA-BAR</h1>
+         </div>
+         <div class="nav">
+            <nav>
+               <ul
+                  class="nav bg-black nav-pills nav-fill gap-2 p-1 small rounded-5 shadow-sm"
+                  id="pillNav2"
+                  role="tablist"
+               >
+                  <li class="nav-item" role="presentation">
+                     <button
+                        class="nav-link active rounded-5"
+                        id="home-tab2"
+                        data-bs-toggle="tab"
+                        type="button"
+                        role="tab"
+                        aria-selected="true"
+                     >
+                        STRING HOPPERS
+                     </button>
+                  </li>
+                  <li class="nav-item" role="presentation">
+                     <button
+                        class="nav-link rounded-5"
+                        id="profile-tab2"
+                        data-bs-toggle="tab"
+                        type="button"
+                        role="tab"
+                        aria-selected="false"
+                     >
+                        RISTORRANTE-PIZZERIA-BAR
+                     </button>
+                  </li>
+                  <li class="nav-item" role="presentation">
+                     <button
+                        class="nav-link rounded-5"
+                        id="contact-tab2"
+                        data-bs-toggle="tab"
+                        type="button"
+                        role="tab"
+                        aria-selected="false"
+                     >
+                        CONTACT
+                     </button>
+                  </li>
+               </ul>
+            </nav>
+         </div>
+         <div class="menu">
+            <ul>
+               <li>-- MENU --</li>
+               <li><a href="#">PIZZA</a></li>
+               <li><a href="#sri-lankan">SRI LANKAN</a></li>
+               <li><a href="#">BIBTE</a></li>
+               <li>
+                  <a href="#"><i class="fas fa-angle-double-down"></i></a>
                </li>
             </ul>
-         </nav>
+         </div>
       </header>
-      <h1>M.R. La Passeggiata</h1>
+      <main>
+         <div id="sri-lankan" class="container-sri_lankan">
+            <div class="secondary-title">
+               <h2>
+                  Sri Lankan<br />
+                  Menu
+               </h2>
+            </div>
+         </div>
+         <div class="container-menu">
+            <div class="menu-items">
+               <div class="third-title">
+                  <h3>FRIED RICE</h3>
+               </div>
+
+               <div class="menu-listing">
+                  <div class="menu-item">
+                     <div class="name">
+                        <p>Special Rice</p>
+                        <div class="ingredients">
+                           <p>esempio, esempio, lorem, lorem, esempio, lorem</p>
+                        </div>
+                     </div>
+                     <div class="price">
+                        <p>25.00 €</p>
+                     </div>
+                  </div>
+               </div>
+
+               <div class="menu-listing">
+                  <div class="menu-item">
+                     <div class="name">
+                        <p>Mix Rice</p>
+                        <div class="ingredients">
+                           <p>esempio, esempio, lorem, lorem, esempio, lorem</p>
+                        </div>
+                     </div>
+                     <div class="price">
+                        <p>10.00/15.00 €</p>
+                     </div>
+                  </div>
+               </div>
+               <div class="menu-listing">
+                  <div class="menu-item">
+                     <div class="name">
+                        <p>Chicken Rice</p>
+                        <div class="ingredients">
+                           <p>esempio, esempio, lorem, lorem, esempio, lorem</p>
+                        </div>
+                     </div>
+                     <div class="price">
+                        <p>8.00/12.00 €</p>
+                     </div>
+                  </div>
+               </div>
+               <div class="menu-listing">
+                  <div class="menu-item">
+                     <div class="name">
+                        <p>Egg Rice</p>
+                        <div class="ingredients">
+                           <p>esempio, esempio, lorem, lorem, esempio, lorem</p>
+                        </div>
+                     </div>
+                     <div class="price">
+                        <p>7.00/10.00 €</p>
+                     </div>
+                  </div>
+               </div>
+               <div class="menu-listing">
+                  <div class="menu-item">
+                     <div class="name">
+                        <p>Prawn Rice</p>
+                        <div class="ingredients">
+                           <p>esempio, esempio, lorem, lorem, esempio, lorem</p>
+                        </div>
+                     </div>
+                     <div class="price">
+                        <p>8.00 €</p>
+                     </div>
+                  </div>
+               </div>
+            </div>
+            <div class="menu-img">
+               <img
+                  src="./assets/img/fried-rice.png"
+                  alt="image-of-fried-rice"
+               />
+            </div>
+         </div>
+      </main>
       <script
          src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
          integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
