did media querry for mobile

--- a/index.html
+++ b/index.html
@@ -87,92 +87,103 @@
          </div>
       </header>
       <main>
-         <div id="sri-lankan" class="container-sri_lankan">
+         <div id="sri-lankan" class="container container-sri_lankan">
             <div class="secondary-title">
                <h2>
                   Sri Lankan<br />
                   Menu
                </h2>
             </div>
-         </div>
-         <div class="container-menu">
-            <div class="menu-items">
-               <div class="third-title">
-                  <h3>FRIED RICE</h3>
-               </div>
 
-               <div class="menu-listing">
-                  <div class="menu-item">
-                     <div class="name">
-                        <p>Special Rice</p>
-                        <div class="ingredients">
-                           <p>esempio, esempio, lorem, lorem, esempio, lorem</p>
-                        </div>
-                     </div>
-                     <div class="price">
-                        <p>25.00 €</p>
-                     </div>
+            <div class="container-menu">
+               <div class="menu-items">
+                  <div class="third-title">
+                     <h3>FRIED RICE</h3>
                   </div>
-               </div>
 
-               <div class="menu-listing">
-                  <div class="menu-item">
-                     <div class="name">
-                        <p>Mix Rice</p>
-                        <div class="ingredients">
-                           <p>esempio, esempio, lorem, lorem, esempio, lorem</p>
+                  <div class="menu-listing">
+                     <div class="menu-item">
+                        <div class="name">
+                           <p>Special Rice</p>
+                           <div class="ingredients">
+                              <p>
+                                 esempio, esempio, lorem, lorem, esempio, lorem
+                              </p>
+                           </div>
+                        </div>
+                        <div class="price">
+                           <p>25.00 €</p>
                         </div>
                      </div>
-                     <div class="price">
-                        <p>10.00/15.00 €</p>
+                  </div>
+
+                  <div class="menu-listing">
+                     <div class="menu-item">
+                        <div class="name">
+                           <p>Mix Rice</p>
+                           <div class="ingredients">
+                              <p>
+                                 esempio, esempio, lorem, lorem, esempio, lorem
+                              </p>
+                           </div>
+                        </div>
+                        <div class="price">
+                           <p>10.00/15.00 €</p>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="menu-listing">
+                     <div class="menu-item">
+                        <div class="name">
+                           <p>Chicken Rice</p>
+                           <div class="ingredients">
+                              <p>
+                                 esempio, esempio, lorem, lorem, esempio, lorem
+                              </p>
+                           </div>
+                        </div>
+                        <div class="price">
+                           <p>8.00/12.00 €</p>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="menu-listing">
+                     <div class="menu-item">
+                        <div class="name">
+                           <p>Egg Rice</p>
+                           <div class="ingredients">
+                              <p>
+                                 esempio, esempio, lorem, lorem, esempio, lorem
+                              </p>
+                           </div>
+                        </div>
+                        <div class="price">
+                           <p>7.00/10.00 €</p>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="menu-listing">
+                     <div class="menu-item">
+                        <div class="name">
+                           <p>Prawn Rice</p>
+                           <div class="ingredients">
+                              <p>
+                                 esempio, esempio, lorem, lorem, esempio, lorem
+                              </p>
+                           </div>
+                        </div>
+                        <div class="price">
+                           <p>8.00 €</p>
+                        </div>
                      </div>
                   </div>
                </div>
-               <div class="menu-listing">
-                  <div class="menu-item">
-                     <div class="name">
-                        <p>Chicken Rice</p>
-                        <div class="ingredients">
-                           <p>esempio, esempio, lorem, lorem, esempio, lorem</p>
-                        </div>
-                     </div>
-                     <div class="price">
-                        <p>8.00/12.00 €</p>
-                     </div>
-                  </div>
+               <div class="menu-img">
+                  <img
+                     src="./assets/img/fried-rice.png"
+                     alt="image-of-fried-rice"
+                  />
                </div>
-               <div class="menu-listing">
-                  <div class="menu-item">
-                     <div class="name">
-                        <p>Egg Rice</p>
-                        <div class="ingredients">
-                           <p>esempio, esempio, lorem, lorem, esempio, lorem</p>
-                        </div>
-                     </div>
-                     <div class="price">
-                        <p>7.00/10.00 €</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="menu-listing">
-                  <div class="menu-item">
-                     <div class="name">
-                        <p>Prawn Rice</p>
-                        <div class="ingredients">
-                           <p>esempio, esempio, lorem, lorem, esempio, lorem</p>
-                        </div>
-                     </div>
-                     <div class="price">
-                        <p>8.00 €</p>
-                     </div>
-                  </div>
-               </div>
-            </div>
-            <div class="menu-img">
-               <img
-                  src="./assets/img/fried-rice.png"
-                  alt="image-of-fried-rice"
-               />
             </div>
          </div>
       </main>
