added some pizza

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
          <div class="menu">
             <ul>
                <li>-- MENU --</li>
-               <li><a href="#">PIZZA</a></li>
+               <li><a href="#pizza">PIZZA</a></li>
                <li><a href="#sri-lankan">SRI LANKAN</a></li>
                <li><a href="#">BIBTE</a></li>
                <li>
@@ -87,6 +87,124 @@
          </div>
       </header>
       <main>
+         <div id="pizza" class="container container-sri_lankan">
+            <div class="secondary-title">
+               <h2>Pizza Menu</h2>
+            </div>
+
+            <div class="container-menu">
+               <div class="menu-items">
+                  <div class="third-title">
+                     <h3>LE CLASSICHE</h3>
+                  </div>
+
+                  <div class="menu-listing">
+                     <div class="menu-item">
+                        <div class="name">
+                           <p>MARINARA</p>
+                           <div class="ingredients">
+                              <p>
+                                 Pomodoro, Origano, Aglio, Basilico, Olio Evo
+                              </p>
+                           </div>
+                        </div>
+                        <div class="price">
+                           <p>4.00 €</p>
+                        </div>
+                     </div>
+                  </div>
+
+                  <div class="menu-listing">
+                     <div class="menu-item">
+                        <div class="name">
+                           <p>COSACCA</p>
+                           <div class="ingredients">
+                              <p>Pomodoro, Grana, Basilico, Olio Evo</p>
+                           </div>
+                        </div>
+                        <div class="price">
+                           <p>4.50 €</p>
+                        </div>
+                     </div>
+                  </div>
+
+                  <div class="menu-listing">
+                     <div class="menu-item">
+                        <div class="name">
+                           <p>MARGHERITA</p>
+                           <div class="ingredients">
+                              <p>
+                                 Pomodoro, Origano, Aglio, Basilico, Olio Evo
+                              </p>
+                           </div>
+                        </div>
+                        <div class="price">
+                           <p>5.00 €</p>
+                        </div>
+                     </div>
+                  </div>
+
+                  <!-- ********************************************************* -->
+                  <div class="menu-listing">
+                     <div class="menu-item">
+                        <div class="name">
+                           <p>Egg Rice</p>
+                           <div class="ingredients">
+                              <p>
+                                 Riso Basmati, Uova, Carote, Porri, Aglio,
+                                 Zenzero
+                              </p>
+                           </div>
+                        </div>
+                        <div class="price">
+                           <p>7.00/10.00 €</p>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="menu-listing">
+                     <div class="menu-item">
+                        <div class="name">
+                           <p>Prawn Rice</p>
+                           <div class="ingredients">
+                              <p>
+                                 Riso Basmati, Gamberi, Uova, Carote, Porri,
+                                 Aglio, Zenzero
+                              </p>
+                           </div>
+                        </div>
+                        <div class="price">
+                           <p>15.00 €</p>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="menu-listing">
+                     <div class="menu-item">
+                        <div class="name">
+                           <p>Nasi Goreng</p>
+                           <div class="ingredients">
+                              <p>Carne: Pollo</p>
+                              <p>
+                                 Riso Basmati, Gamberi, Uova, Carote, Porri,
+                                 Aglio, Zenzero, Peperoni, Anacardi, Cetriolo,
+                                 Cipolla, Batter
+                              </p>
+                           </div>
+                        </div>
+                        <div class="price">
+                           <p>20.00 €</p>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="menu-img">
+                  <img
+                     src="./assets/img/fried-rice.png"
+                     alt="image-of-fried-rice"
+                  />
+               </div>
+            </div>
+         </div>
+
          <div id="sri-lankan" class="container container-sri_lankan">
             <div class="secondary-title">
                <h2>
