adding pizze bianche

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                <h2>Pizza Menu</h2>
             </div>
 
-            <div class="container-menu">
+            <div id="le-classiche" class="container-menu">
                <div class="menu-items">
                   <div class="third-title">
                      <h3>LE CLASSICHE</h3>
@@ -104,7 +104,7 @@
                            <p>MARINARA</p>
                            <div class="ingredients">
                               <p>
-                                 Pomodoro, Origano, Aglio, Basilico, Olio Evo
+                                 POMODORO, ORIGANO, AGLIO, BASILICO, OLIO EVO
                               </p>
                            </div>
                         </div>
@@ -119,7 +119,7 @@
                         <div class="name">
                            <p>COSACCA</p>
                            <div class="ingredients">
-                              <p>Pomodoro, Grana, Basilico, Olio Evo</p>
+                              <p>POMODORO, GRANA, BASILICO, OLIO EVO</p>
                            </div>
                         </div>
                         <div class="price">
@@ -133,9 +133,7 @@
                         <div class="name">
                            <p>MARGHERITA</p>
                            <div class="ingredients">
-                              <p>
-                                 Pomodoro, Origano, Aglio, Basilico, Olio Evo
-                              </p>
+                              <p>POMODORO,FIOR DI LATTE, BASILICO, OLIO EVO</p>
                            </div>
                         </div>
                         <div class="price">
@@ -144,54 +142,308 @@
                      </div>
                   </div>
 
-                  <!-- ********************************************************* -->
                   <div class="menu-listing">
                      <div class="menu-item">
                         <div class="name">
-                           <p>Egg Rice</p>
+                           <p>DIAVOLA</p>
                            <div class="ingredients">
-                              <p>
-                                 Riso Basmati, Uova, Carote, Porri, Aglio,
-                                 Zenzero
-                              </p>
+                              <p>POMODORO, FIOR DI LATTE, SALAME PICCANTE</p>
                            </div>
                         </div>
                         <div class="price">
-                           <p>7.00/10.00 €</p>
+                           <p>6.50 €</p>
                         </div>
                      </div>
                   </div>
                   <div class="menu-listing">
                      <div class="menu-item">
                         <div class="name">
-                           <p>Prawn Rice</p>
+                           <p>SICILIANA</p>
                            <div class="ingredients">
                               <p>
-                                 Riso Basmati, Gamberi, Uova, Carote, Porri,
-                                 Aglio, Zenzero
+                                 POMODORO, FIOR DI LATTE, MELANZANE, BASILICO,
+                                 OLI EVO
                               </p>
                            </div>
                         </div>
                         <div class="price">
-                           <p>15.00 €</p>
+                           <p>6.50 €</p>
                         </div>
                      </div>
                   </div>
                   <div class="menu-listing">
                      <div class="menu-item">
                         <div class="name">
-                           <p>Nasi Goreng</p>
+                           <p>NAPOLETANA</p>
                            <div class="ingredients">
-                              <p>Carne: Pollo</p>
                               <p>
-                                 Riso Basmati, Gamberi, Uova, Carote, Porri,
-                                 Aglio, Zenzero, Peperoni, Anacardi, Cetriolo,
-                                 Cipolla, Batter
+                                 POMODORO, MOZZARELLA DI BUFALA, BASILICO,
+                                 SCAGLIE DI GRANA, OLIO EVO
                               </p>
                            </div>
                         </div>
                         <div class="price">
-                           <p>20.00 €</p>
+                           <p>8.00 €</p>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="menu-listing">
+                     <div class="menu-item">
+                        <div class="name">
+                           <p>ORTOLANA</p>
+                           <div class="ingredients">
+                              <p>
+                                 POMODORO, FIOR DI LATTE, PEPERONI, MELANZANE,
+                                 FUNGHI, ZUCCHINE, FRIARIELLI
+                              </p>
+                           </div>
+                        </div>
+                        <div class="price">
+                           <p>7.50 €</p>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="menu-listing">
+                     <div class="menu-item">
+                        <div class="name">
+                           <p>CAPRICCIOSA</p>
+                           <div class="ingredients">
+                              <p>
+                                 POMODORO, FUNGHI, PROSCIUTTO, SALAME, OLIVE,
+                                 CARCIOFINI, FIOR DI LATTE, BASILICO, OLIO EVO
+                              </p>
+                           </div>
+                        </div>
+                        <div class="price">
+                           <p>7.50 €</p>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="menu-listing">
+                     <div class="menu-item">
+                        <div class="name">
+                           <p>PROSCIUTTO E FUNGHI</p>
+                           <div class="ingredients">
+                              <p>
+                                 POMODORO, FIOR DI LATTE, PROSCIUTTO E FUNGHI
+                              </p>
+                           </div>
+                        </div>
+                        <div class="price">
+                           <p>6.50 €</p>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="menu-listing">
+                     <div class="menu-item">
+                        <div class="name">
+                           <p>TONNO E CIPOLLA</p>
+                           <div class="ingredients">
+                              <p>
+                                 POMODORO, TONNO, POMODORINI, CIPOLLA, BASILICO,
+                                 OLIO EVO, SCORZA DI LIMONE
+                              </p>
+                           </div>
+                        </div>
+                        <div class="price">
+                           <p>7.00 €</p>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="menu-listing">
+                     <div class="menu-item">
+                        <div class="name">
+                           <p>ESTATE</p>
+                           <div class="ingredients">
+                              <p>
+                                 POMODORO, CRUDO, BURRATA, BASILICO, OLIO EVO
+                              </p>
+                           </div>
+                        </div>
+                        <div class="price">
+                           <p>7.00 €</p>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="menu-img">
+                  <img
+                     src="./assets/img/fried-rice.png"
+                     alt="image-of-fried-rice"
+                  />
+               </div>
+            </div>
+
+            <div id="pizze-bianche" class="container-menu">
+               <div class="menu-items">
+                  <div class="third-title">
+                     <h3>PIZZE BIANCHE</h3>
+                  </div>
+
+                  <div class="menu-listing">
+                     <div class="menu-item">
+                        <div class="name">
+                           <p>MARINARA</p>
+                           <div class="ingredients">
+                              <p>
+                                 POMODORO, ORIGANO, AGLIO, BASILICO, OLIO EVO
+                              </p>
+                           </div>
+                        </div>
+                        <div class="price">
+                           <p>4.00 €</p>
+                        </div>
+                     </div>
+                  </div>
+
+                  <div class="menu-listing">
+                     <div class="menu-item">
+                        <div class="name">
+                           <p>COSACCA</p>
+                           <div class="ingredients">
+                              <p>POMODORO, GRANA, BASILICO, OLIO EVO</p>
+                           </div>
+                        </div>
+                        <div class="price">
+                           <p>4.50 €</p>
+                        </div>
+                     </div>
+                  </div>
+
+                  <div class="menu-listing">
+                     <div class="menu-item">
+                        <div class="name">
+                           <p>MARGHERITA</p>
+                           <div class="ingredients">
+                              <p>POMODORO,FIOR DI LATTE, BASILICO, OLIO EVO</p>
+                           </div>
+                        </div>
+                        <div class="price">
+                           <p>5.00 €</p>
+                        </div>
+                     </div>
+                  </div>
+
+                  <div class="menu-listing">
+                     <div class="menu-item">
+                        <div class="name">
+                           <p>DIAVOLA</p>
+                           <div class="ingredients">
+                              <p>POMODORO, FIOR DI LATTE, SALAME PICCANTE</p>
+                           </div>
+                        </div>
+                        <div class="price">
+                           <p>6.50 €</p>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="menu-listing">
+                     <div class="menu-item">
+                        <div class="name">
+                           <p>SICILIANA</p>
+                           <div class="ingredients">
+                              <p>
+                                 POMODORO, FIOR DI LATTE, MELANZANE, BASILICO,
+                                 OLI EVO
+                              </p>
+                           </div>
+                        </div>
+                        <div class="price">
+                           <p>6.50 €</p>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="menu-listing">
+                     <div class="menu-item">
+                        <div class="name">
+                           <p>NAPOLETANA</p>
+                           <div class="ingredients">
+                              <p>
+                                 POMODORO, MOZZARELLA DI BUFALA, BASILICO,
+                                 SCAGLIE DI GRANA, OLIO EVO
+                              </p>
+                           </div>
+                        </div>
+                        <div class="price">
+                           <p>8.00 €</p>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="menu-listing">
+                     <div class="menu-item">
+                        <div class="name">
+                           <p>ORTOLANA</p>
+                           <div class="ingredients">
+                              <p>
+                                 POMODORO, FIOR DI LATTE, PEPERONI, MELANZANE,
+                                 FUNGHI, ZUCCHINE, FRIARIELLI
+                              </p>
+                           </div>
+                        </div>
+                        <div class="price">
+                           <p>7.50 €</p>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="menu-listing">
+                     <div class="menu-item">
+                        <div class="name">
+                           <p>CAPRICCIOSA</p>
+                           <div class="ingredients">
+                              <p>
+                                 POMODORO, FUNGHI, PROSCIUTTO, SALAME, OLIVE,
+                                 CARCIOFINI, FIOR DI LATTE, BASILICO, OLIO EVO
+                              </p>
+                           </div>
+                        </div>
+                        <div class="price">
+                           <p>7.50 €</p>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="menu-listing">
+                     <div class="menu-item">
+                        <div class="name">
+                           <p>PROSCIUTTO E FUNGHI</p>
+                           <div class="ingredients">
+                              <p>
+                                 POMODORO, FIOR DI LATTE, PROSCIUTTO E FUNGHI
+                              </p>
+                           </div>
+                        </div>
+                        <div class="price">
+                           <p>6.50 €</p>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="menu-listing">
+                     <div class="menu-item">
+                        <div class="name">
+                           <p>TONNO E CIPOLLA</p>
+                           <div class="ingredients">
+                              <p>
+                                 POMODORO, TONNO, POMODORINI, CIPOLLA, BASILICO,
+                                 OLIO EVO, SCORZA DI LIMONE
+                              </p>
+                           </div>
+                        </div>
+                        <div class="price">
+                           <p>7.00 €</p>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="menu-listing">
+                     <div class="menu-item">
+                        <div class="name">
+                           <p>ESTATE</p>
+                           <div class="ingredients">
+                              <p>
+                                 POMODORO, CRUDO, BURRATA, BASILICO, OLIO EVO
+                              </p>
+                           </div>
+                        </div>
+                        <div class="price">
+                           <p>7.00 €</p>
                         </div>
                      </div>
                   </div>
